# mint-semantic-kernel

./: .gitignore  README.md  pyproject.toml
mint_semantic_kernel/: __init__.py  plugin.py
samples/: mint_plugin_demo.py
tests/: test_plugin.py
